# Mikes_GooglePhoto-Fixer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BUGFIX-SUMMARY.md  CHANGELOG.md  CI-CD-SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY_TO_YOUR_REPO.txt  Create-DesktopShortcut.ps1  DEMO_VIDEO_SCRIPT.md  FINAL-TEST-REPORT.md  FOR_WIFE_READ_ME.txt  LICENSE  MOBILE_ARCHITECTURE.md  MOBILE_BUILD.md  MOBILE_IMPLEMENTATION_SUMMARY.md  PhotoManager.py  PhotoManagerMobile.py  PhotoManagerQt.py  PhotoManagerWeb.py  PhotoProcessor.py  PhotoProcessorEnhanced.py  QUICK-REFERENCE.md  README.md  ROADMAP.md  ReviewInterface.py  ReviewInterfaceQt.py  SECURITY.md  SETUP.md  START_GUI.vbs  START_HERE.bat  START_WEB_FOR_PHONE.bat  TASK-COMPLETION-SUMMARY.md  TESTING-GUIDE.md  buildozer.spec  config.json  docker-compose.yml  generate_test_data.py  install.ps1  (+9 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  tests.yml
docs/: USAGE_LOGGING.md  faq.md  index.md
docs/getting-started/: quick-start.md
tests/: __init__.py  conftest.py
tests/compatibility/: __init__.py  test_formats.py  test_opencv.py  test_pillow.py
tests/integration/: test_basic_workflow.py
tests/unit/: test_hash_calculation.py  test_logging_config.py  test_mobile_utils.py  test_quality_assessment.py
utils/: __init__.py  logging_config.py
